# auto_labeling

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  entrypoint.sh  git_init.sh
catkin_ws/src/bag_to_pcl_pcd/: CMakeLists.txt  package.xml
catkin_ws/src/bag_to_pcl_pcd/src/: bagToPcd.cpp
catkin_ws/src/pcd_to_bag/: CMakeLists.txt  package.xml
catkin_ws/src/pcd_to_bag/launch/: pcd_to_bag.launch
catkin_ws/src/pcd_to_bag/src/: pcdToBag.cpp
python_scripts/: filter_training_scans.py  tf_listener.py  tum_to_matrices.py
scripts/: create_maps.bash  extract_scans.bash  features.bash  filter_ground.bash  label_scans.bash  pipeline.bash  registration.bash  scripts_template.bash  tum_to_matrices.bash
src/: CMakeLists.txt  featuresGenerator.cpp  featuresGenerator.h  getDirFromPath.h  main.cpp  progressBar.h  saveLoadMatrix.h
